<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_change_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/colorWhite">

        <TextView
            style="@style/mineText"
            android:layout_width="@dimen/dp_70"
            android:layout_height="wrap_content"
            android:text="@string/label_old_pwd" />

        <EditText
            android:id="@+id/edtOldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:hint="@string/hint_old_pwd"
            android:inputType="textPassword"
            android:lines="1"
            android:text=""
            android:textColor="@color/text_black_2"
            android:textColorHint="@color/colorUserName"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/colorWhite">

        <TextView
            style="@style/mineText"
            android:layout_width="@dimen/dp_70"
            android:layout_height="wrap_content"
            android:text="@string/label_new_pwd1" />

        <EditText
            android:id="@+id/edtNewPwd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:hint="@string/hint_new_pwd1"
            android:inputType="textPassword"
            android:lines="1"
            android:text=""
            android:textColor="@color/text_black_2"
            android:textColorHint="@color/colorUserName"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/colorWhite">

        <TextView
            style="@style/mineText"
            android:layout_width="@dimen/dp_70"
            android:layout_height="wrap_content"
            android:text="@string/label_new_pwd2" />

        <EditText
            android:id="@+id/edtNewPwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:hint="@string/hint_new_pwd2"
            android:inputType="textPassword"
            android:lines="1"
            android:text=""
            android:textColor="@color/text_black_2"
            android:textColorHint="@color/colorUserName"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/btn_bg_normal"
        android:padding="@dimen/dp_5"
        android:text="@string/btn_confirm"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_16" />

</LinearLayout>
