<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/txtPhoneTitle"
            style="@style/mineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/string_phone" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/txtPhoneTitle"
            android:background="@null"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:lines="1"
            android:text=""
            android:textColor="@color/text_black_2"
            android:textColorHint="@color/colorUserName"
            android:textSize="@dimen/sp_16" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/txtVerifyTitle"
            style="@style/mineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_verify_code" />

        <EditText
            android:id="@+id/edtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toLeftOf="@+id/btnSend"
            android:layout_toRightOf="@+id/txtVerifyTitle"
            android:background="@null"
            android:inputType="number"
            android:lines="1"
            android:text=""
            android:textColor="@color/text_black_2"
            android:textColorHint="@color/colorUserName"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_35"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/btn_bg_normal"
            android:text="@string/btn_send_code"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>


    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/btn_bg_normal"
        android:padding="@dimen/dp_5"
        android:text="@string/label_next"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_16" />

</LinearLayout>