<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llCalendarContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@color/white_option"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_10">

        <LinearLayout
            android:id="@+id/llStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_sdate"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/txtStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="2016-12-12"
                android:textColor="@color/color_black_2"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llStart"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_edate"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/txtEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="2016-12-12"
                android:textColor="@color/color_black_2"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dp_5"
            android:background="@drawable/btn_bg_normal"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/btn_confirm"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>

    <com.android.widget.calendar.MaterialCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:mcv_selectionColor="@color/blue" />
</LinearLayout>